[package]
name = "meme_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "import"
path = "src/import_images/main.rs"

[[bin]]
name = "meme_bot"
path = "src/meme_bot/main.rs"

[dependencies]
fang = { git = "https://github.com/ayrat555/fang.git", features = [
    "asynk-postgres",
], default-features = false }
frankenstein = "0.34"
